configs/extra/nginx-ingress.yml
kind: Pod
apiVersion: v1
metadata:
  name: apple-app
  labels:
    app: apple
spec:
  containers:
    - name: apple-app
      image: hashicorp/http-echo
      args:
        - "-text=apple"
---
kind: Service
apiVersion: v1
metadata:
  name: apple-service
spec:
  selector:
    app: apple
  ports:
    - port: 5678 # Default port for image
---
kind: Pod
apiVersion: v1
metadata:
  name: orange-app
  labels:
    app: orange
spec:
  containers:
    - name: orange-app
      image: hashicorp/http-echo
      args:
        - "-text=orange"
---
kind: Service
apiVersion: v1
metadata:
  name: orange-service
spec:
  selector:
    app: orange
  ports:
    - port: 5678 # Default port for image
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-packops-local
spec:
  ingressClassName: nginx
  rules:
  - host: packops.local
    http:
      paths:
      - path: /apple
        pathType: Prefix
        backend:
          service:
            name: apple-service
            port:
              number: 5678
      - path: /orange
        pathType: Prefix
        backend:
          service:
            name: orange-service
            port:
              number: 5678
